# PapeiNLP

./: README.md  environment.yml  ergasia1_A.py  ergasia1_B.py  ergasia1_C.py  ergasia2.py  pyproject.toml  reconstructionsA.json  reconstructionsAB.json  reconstructionsB.json
data/: reconstructionsA.json  reconstructionsAB.json  reconstructionsB.json
