[tool.poetry]
name = "nlp"
version = "0.1.0"
description = ""
authors = ["kostas <kgerzerl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
nltk = "^3.9.1"
matplotlib = "^3.10.5"
scikit-learn = "^1.7.1"
sentence-transformers = "^5.1.0"
transformers = "^4.55.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
